# crypto-researcher

./: .gitignore  render.yaml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/application/: mod.rs
backend/src/application/controller/: analyze.rs  auth.rs  config.rs  history.rs  mod.rs  prediction.rs
backend/src/application/dto/: accuracy_dto.rs  auth_dto.rs  config_dto.rs  history_dto.rs  market_dto.rs  mod.rs  prediction_dto.rs
backend/src/application/mapper/: mod.rs  transform_prediction_entity_to_dto.rs  transform_ticker_entity_to_dto.rs
backend/src/application/middleware/: mod.rs
backend/src/application/request_dto/: analyze_params_dto.rs  filter_params_dto.rs  history_params_dto.rs  mod.rs
backend/src/application/usecases/: get_accuracy.rs  get_history.rs  get_market.rs  get_predictions.rs  mod.rs  run_analysis.rs  seed_users.rs
backend/src/domain/: mod.rs
backend/src/domain/market/entities/: mod.rs
backend/src/domain/prediction/entities/: mod.rs
backend/src/domain/prediction/services/: mod.rs
backend/src/domain/user/entities/: mod.rs
backend/src/infrastructure/repositories/prediction/: mod.rs
backend/src/infrastructure/repositories/user/: mod.rs
backend/src/infrastructure/services/: mod.rs
backend/src/infrastructure/services/auth/: mod.rs
backend/src/infrastructure/services/bybit/: mod.rs
backend/src/infrastructure/services/database/: mod.rs
backend/src/infrastructure/services/news/: mod.rs
backend/src/infrastructure/services/openrouter/: mod.rs
frontend/: cypress.config.ts  index.html  (+4 more)
(+85 files in other folders)
