[package]
name = "crypto-researcher-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18.0"
tokio = { version = "1", features = ["full"] }
async-std = "1.12.0"
validator = { version = "0.16.1", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.9.5"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bson = { version = "2", features = ["chrono-0_4"] }
jsonwebtoken = "9"
bcrypt = "0.15"

[dependencies.mongodb]
version = "2.6.1"
features = ["tokio-sync"]
